--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Little Lemon Restaurant is a charming and cozy establishment that offers a unique culinary experience. With a relaxed atmosphere and modern decor, this restaurant stands out for its fresh and vibrant cuisine. From locally sourced seasonal ingredients to innovative culinary techniques, each dish at Little Lemon Restaurant is designed to delight the senses. Friendly and attentive service completes the experience, making this place an ideal destination for enjoying a memorable meal."/>
+    <meta property="og:title" content="My Little Lemon">
+    <meta property="og:image" content='../src/images/Logo.svg'>
+    <meta property="og:url" content="www.google.com">
+    <meta property="og:description" content="Discover a fresh and vibrant culinary experience at Little Lemon Restaurant. Delight in our flavorful dishes, cozy atmosphere, and attention to detail. Join us for a memorable dining experience!">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
