--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <meta property="og:url" content="www.google.com">
     <meta property="og:description" content="Discover a fresh and vibrant culinary experience at Little Lemon Restaurant. Delight in our flavorful dishes, cozy atmosphere, and attention to detail. Join us for a memorable dining experience!">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--Markazi text medium-->
+    <link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
